fix: use ancient java appropriate string methods